<resources>
    <string name="app_name">SyndriveApp</string>
    <string name="title_activity_login">Sign in</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btn_login">Login</string>
    <string name="date_of_birth">Date of birth (dd/mm/yyyy) </string>
    <string name="new_user">New user? Sign up</string>
    <string name="user_name">Name</string>
    <string name="next">Next</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="blood_group">Blood group</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Syndrive</string>
    <string name="nav_header_subtitle">syndriveteam@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="reset_password">Reset Password</string>

    <string name="btn_send">Send SOS</string>
    <string name="btn_dismiss">Dismiss</string>
    <string name="tv_sent">SOS Sent</string>
    <string name="tv_dismissed">Alert Dismissed</string>

    <string name="tv_profile_details">Profile Details</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_dob">DOB (dd/mm/yyyy)</string>
    <string name="hint_blood_group">Blood Group</string>
    <string name="hint_password">Password</string>
    <string name="hint_new_pwd">Enter New Password</string>
    <string name="hint_confirm_new_pwd">Confirm New Password</string>
    <string name="tv_change_password">Change Password</string>
    <string name="tv_about">Detects accident and reduces the rescue time!</string>
    <string name="tv_about2">Syndrive detects and measures the impact during accidents and if it goes beyond the threshold set in it, then we would contact the nearest hospital and also your near and dear ones.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>

    <string name="hint_emname1">1. Name</string>
    <string name="hint_num1">Number</string>
    <string name="hint_emname2">2. Name</string>
    <string name="hint_num2">Number</string>
    <string name="hint_emname3">3. Name</string>
    <string name="hint_num3">Number</string>
    <string name="hint_registerbtn">Register</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_alert">Alert Time</string>
    <string name="title_dialog_duration">Select duration</string>

    <string-array name="settings_list_preference_titles">
        <item>10 seconds</item>
        <item>15 seconds</item>
        <item>20 seconds</item>
        <item>25 seconds</item>
        <item>30 seconds</item>

    </string-array>
    <string-array name="settings_list_preference_values">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>

    </string-array>

</resources>
